【i】【id，生成器优化】